--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </div>
    </section>
    
-   <div class="header_button" ><a href="mailto:webmaster@example.com"><h3>CONTACT US</h3></a></div>
+   <div class="header_button" ><a href="mailto:cronos.berlin@web.de"><h3>CONTACT US</h3></a></div>
  </header>
  
  <article class="article_info">
@@ -39,8 +39,8 @@
    <div class="article_contact">
     <h2>Contact Information</h2>
      <ul>
-       <li>Email: info@gmail.com</li>
-       <li>Phone: 444 444 44 44</li>
+       <li>Email: cronos.berlin@web.de</li>
+       <li>Phone: +49 1578 9806006</li>
      </ul>
    </div>
  </article>
