logo-color-change-to white

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
  <body class="wrapper">
  <header>
-   <img class="logo" src="images/logo_cronos.png" width="270">
+   <img class="logo" src="images/logo_cronos_white.png" width="270">
    
    <section class="section_qualities">
      <div class="section_qualities_first">
